appId: ${MAESTRO_APP_ID}
---
- extendedWaitUntil:
    visible:
      id: login-username
    timeout: 30000
- runFlow: username.yaml
- tapOn:
    id: login-password
    point: '95%,50%'
- eraseText
- inputText: ${MAESTRO_PASSWORD}
- runFlow: submit-visible.yaml
- tapOn:
    id: login-submit
- extendedWaitUntil:
    visible: TEST ${USERNAME}
    timeout: 30000
